<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Application -->
    <string name="app_name">Orion Examples</string>
    <string name="double_back_exit_notification">Please click BACK again to exit</string>

    <!-- Main menu -->
    <string name="main_menu_empty_list">No examples found</string>
    <string name="main_menu_permission_request_title">Permission Required</string>
    <string name="main_menu_permission_request_write">Permission to write to external storage is required for copying test content in place.</string>
    <string name="main_menu_permission_grant_button_label">OK</string>
    <string name="main_menu_permission_warning">Some examples may fail to work due to denied permissions.</string>
    <string name="main_menu_init_title">Initializing&#8230;</string>
    <string name="main_menu_init_message">Copying test content in place</string>
    <string name="main_menu_init_files_copied">%d file(s) were copied</string>

    <!-- Video Player -->
    <string name="player_read_permission_denied">Cannot play content (read permission not granted)</string>
    <string name="player_camera_permission_denied">Cannot open camera (camera permission not granted)</string>
    <string name="player_media_not_mounted">Cannot play content (media not mounted)</string>
    <string name="player_file_download_title">Please wait&#8230;</string>
    <string name="player_file_download_message">Downloading file %s</string>
    <string name="player_file_download_completed">%d file(s) were downloaded</string>
    <string name="player_long_tap_hint_enter_vr_mode">"Long tap to enter VR mode"</string>
    <string name="player_long_tap_hint_exit_vr_mode">"Long tap to exit VR mode"</string>
    <string name="player_controls_play_overlay_desc">Play</string>
    <string name="player_controls_pause_overlay_desc">Pause</string>
    <string name="player_console_message_log">[Message Log]</string>
    <string name="player_file_already_downloaded">Video file already downloaded</string>

    <!-- Video controls -->
    <string name="player_title_panel_logo_button_desc">Logo</string>
    <string name="player_title_panel_title_text">Orion360 SDK Pro</string>
    <string name="player_title_panel_close_button_desc">Close</string>
    <string name="player_controls_play_button_desc">Play/pause</string>
    <string name="player_controls_audio_button_desc">Toggle mute on/off</string>
    <string name="player_controls_player_position" tools:ignore="TypographyDashes">-:--</string>
    <string name="player_controls_duration" tools:ignore="TypographyDashes">-:--</string>
    <string name="player_controls_remaining" tools:ignore="TypographyDashes">-:--</string>
    <string name="player_controls_vr_button_desc">Toggle VR on/off</string>
    <string name="player_controls_projection_button_desc">Projection</string>
    <string name="player_controls_zoom_in_button_desc">Zoom in</string>
    <string name="player_controls_zoom_out_button_desc">Zoom out</string>
    <string name="player_hud_progressbar_image_desc">Progress</string>

    <!-- Sprite layout tool -->
    <string name="sprite_layout_alignment_position">Sprite alignment rule:</string>
    <string name="sprite_layout_alignment_rule">Sprite scale mode:</string>
    <string name="sprite_layout_reticle">asset://align/reticle.png</string>
    <string name="sprite_layout_bounds">asset://align/bounds.png</string>
    <string-array name="sprite_layout_rects">
        <item>asset://align/rect_1.png</item>
        <item>asset://align/rect_2.png</item>
        <item>asset://align/rect_3.png</item>
        <item>asset://align/rect_4.png</item>
        <item>asset://align/rect_5.png</item>
        <item>asset://align/rect_6.png</item>
    </string-array>
    <string name="sprite_layout_top_left">TL</string>
    <string name="sprite_layout_top_center">TC</string>
    <string name="sprite_layout_top_right">TR</string>
    <string name="sprite_layout_center_left">CL</string>
    <string name="sprite_layout_center_center">CC</string>
    <string name="sprite_layout_center_right">CR</string>
    <string name="sprite_layout_bottom_left">BL</string>
    <string name="sprite_layout_bottom_center">BC</string>
    <string name="sprite_layout_bottom_right">BR</string>
    <string name="sprite_layout_swap_texture">Swap texture</string>
    <string name="sprite_layout_outside">Outside</string>
    <string name="sprite_layout_inside">Inside</string>
    <string name="sprite_layout_short_width">Width</string>
    <string name="sprite_layout_short_height">Height</string>
    <string name="sprite_layout_crop">Crop</string>

    <!-- Button/hotspot image files -->
    <string name="asset_nadir_patch">asset://Orion360_nadir_patch_1024x1024.png</string>
    <string name="asset_hotspot_reticle">asset://Orion360_hotspot_reticle_256x256.png</string>
    <string name="asset_hotspot_start">asset://Orion360_hotspot_start_256x256.png</string>
    <string name="asset_hotspot_pie">asset://Orion360_hotspot_pie_256x256.png</string>
    <string name="asset_polygon_cube">asset://cube/cube.obj</string>
    <string name="asset_polygon_orion_plain">asset://orion/orion_plain.obj</string>
    <string name="asset_polygon_keyboard">asset://keyboard_3d_tekstuurit_3_1_1.obj</string>
    <string name="asset_icon_play">asset://icon/play.png</string>
    <string name="asset_icon_home">asset://icon/home.png</string>
    <string name="asset_icon_arrow_left">asset://icon/arrow_left.png</string>
    <string name="asset_icon_arrow_right">asset://icon/arrow_right.png</string>

    <!-- Google IMA ads -->
    <string name="ad_tag_url"><![CDATA[https://pubads.g.doubleclick.net/gampad/ads?iu=/21775744923/external/single_ad_samples&sz=640x480&cust_params=sample_ct%3Dlinear&ciu_szs=300x250%2C728x90&gdfp_req=1&output=vast&unviewed_position_start=1&env=vp&impl=s&correlator=]]></string>

</resources>
